<resources>
    <string name="app_name">SmartSport</string>
    <string name="splash_screen_title_bottom">Делаем спорт лучше</string>
    <string name="smartsport">SmartSport</string>
    <string name="making_sport_better">Делаем\nспорт лучше</string>
    <string name="choose_theme_title">Выберете интересные для вас темы:\n3 или более</string>
    <string name="next_button">Далее</string>
    <string name="sign_in">Войти</string>
    <string name="choose_interesting">Выберите интересные темы</string>
    <string name="search">Поиск</string>
    <string name="choose_favorie_sport">Выберите любимый спорт</string>
    <string name="football">football</string>
    <string name="football_text">Футбол</string>
    <string name="cycling">Велосипедный спорт</string>
    <string name="cycling_text">Велоспорт</string>
    <string name="fighting_text">Борьба</string>
    <string name="darts_text">Дартс</string>
    <string name="badminton_text">Бадминтон</string>
    <string name="basketball_text">Баскетбол</string>
    <string name="tennis_text">Теннис</string>
    <string name="volleyball_text">Волейбол</string>
    <string name="armrestling_text">Армрестлинг</string>
    <string name="light_text">Легкая\nатлетика</string>
    <string name="gandball_text">Гандболл</string>
    <string name="swimming_text">Плавание</string>
    <string name="save">Сохранить</string>
    <string name="later">Позже</string>
    <string name="choose_football">Выбран футбол</string>
    <string name="choose_badminton">Выбран бадминтон</string>
    <string name="choose_basketball">Выбран баскетбол</string>
    <string name="choose_cycling">Выбран велоспорт</string>
    <string name="choose_tennis">Выбран теннис</string>
    <string name="choose_volleyball">Выбран волейбол</string>
    <string name="choose_fighting">Выбрана борьба</string>
    <string name="armrestling_choose">Выбран армрестлинг</string>
    <string name="light_choose">Выбрана легкая атлетика</string>
    <string name="darts_choose">Выбран дартс</string>
    <string name="gandball_choose">Выбран гандбол</string>
    <string name="swimming_choose">Выбрано плавание</string>
    <string name="alarm_title">Настройте\nуведомления под\nсвои интересы</string>
    <string name="registration_status">Статусы регистрации</string>
    <string name="alarm_for_groups">Уведомления для команд</string>
    <string name="alarm_start_activities">Статусы начала мероприятий</string>
    <string name="sign_up_title">Создайте аккаунт\nна SmartSport</string>
    <string name="intro_text">Читайте сформированную для вас\nперсональную ленту новостей, пишите\nкомментарии и посты и оценивайте тексты\nдругих пользователей!</string>
    <string name="vk_auth_button">Продолжить через VK</string>
    <string name="gosuslugi_auth_button">Продолжить через Госуслуги</string>
    <string name="or">или</string>
    <string name="email_auth_button">Продолжить через Email</string>
    <string name="law_info">Продолжая, вы принимаете Пользовательское\nсоглашение. Данные о собираемых данных представлены\nна странице Правила конфиденциальности</string>
    <string name="vk_auth_error">Ошибка авторизации Вконтакте</string>
    <string name="password_input">Введите пароль</string>
    <string name="email_input">Введите e-mail</string>
    <string name="login_input">Введите логин</string>
    <string name="esia_input">Телефон / Еmail / СНИЛС</string>
    <string name="sign_button">Войти с электронной подписью</string>
    <string name="not_sign_button">Не удаётся войти?</string>
    <string name="pass_esia">Пароль</string>
    <integer name="com_vk_sdk_AppId">8215576</integer>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="reg_statuses">Статусы регистрации</string>
    <string name="reg_info">Вы зарегистрированы на мероприятие</string>
    <string name="your_team_reg_text">Ваша команда зарегистрирована\nна мероприятие</string>
    <string name="team_notifications">Уведомления команд</string>
    <string name="your_team_created_text">Ваша команда создана</string>
    <string name="you_invite_text">Вас приглашают в команду</string>
    <string name="into_text">Заявка на вступление в вашу команду</string>
    <string name="out_of_team_text">Вы исключены из команды</string>
    <string name="one_person_out_of_team_text">Вашу команду покинул участник</string>
    <string name="start_events_status">Статусы начала мероприятия</string>
    <string name="start_soon_text">Скоро начало мероприятия</string>
    <string name="change_event_text">Мероприятие перенесено\nорагнизатором</string>
    <string name="event_canceled_text">Мероприятие отменено</string>
</resources>