<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alarm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="200dp"
        android:text="@string/alarm_title"
        android:textColor="?attr/textFillColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/registration_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_start"
        android:background="@drawable/rounded_corners"
        app:trackTint="@color/orange"
        app:thumbTint="@color/black"
        android:elevation="15sp"
        android:padding="16dp"
        android:text="@string/registration_status"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/alarm_for_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:trackTint="@color/orange"
        app:thumbTint="@color/black"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/rounded_corners"
        android:elevation="15sp"
        android:padding="16dp"
        android:text="@string/alarm_for_groups"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/alarm_start_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_start"
        app:trackTint="@color/orange"
        app:thumbTint="@color/black"
        android:background="@drawable/rounded_corners"
        android:elevation="15sp"
        android:padding="16dp"
        android:text="@string/alarm_start_activities"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:backgroundTint="@color/orange"
        android:text="@string/next_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textFillColor" />

</LinearLayout>