<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.EsiaAuthFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/margin_start"
        android:src="@drawable/gosbig" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:hint="@string/esia_input"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:hint="@string/pass_esia"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:backgroundTint="@color/white"
        android:text="@string/sign_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textFillColor"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/not_sign_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:backgroundTint="@color/white"
        android:text="@string/not_sign_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textFillColor"
        app:cornerRadius="10dp" />

</androidx.cardview.widget.CardView>