<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.EmailAuthFragment">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="200dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:hint="@string/email_input"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:hint="@string/password_input"
        tools:ignore="TextFields" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="end"
        app:iconTint="@color/white" />

</androidx.cardview.widget.CardView>