<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/football_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/football_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/football_checked"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/badminton_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/badminton_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/badminton_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/basketball_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/basketball_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/basketball_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bike_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/cycling_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/bike_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tennis_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/tennis_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/tennis_checked"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/volleyball_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/volleyball_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/volleyball_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fighting_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/fighting_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/fightint_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/armrestling_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/armrestling_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/armrestling_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/light_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="Лёгкая атлетика"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/light_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/darts_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/darts_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/darts_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gandball_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/gandball_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/gandball_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/swimming_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/swimming_text"
            android:textAlignment="textStart"
            android:textColor="?attr/textFillColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/swimming_checked"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>