<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.ChooseSignInFirstFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:src="@drawable/smart_sport" />

    <TextView
        android:id="@+id/smart_sport_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="320dp"
        android:text="@string/smartsport"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="360dp"
        android:text="Спорт для всех"
        android:textColor="?attr/textFillColor"
        android:textSize="26sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/next_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="end"
        app:iconTint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textFillColor"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="end"
        app:iconTint="@android:color/transparent" />

</androidx.cardview.widget.CardView>